management of composite devices
